# remitchain

./: Cargo.toml  README.md  README.md.bak  package-lock.json
.cargo/: config.toml
frontend/: .env.example  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: index.css
frontend/src/components/: ClaimForm.tsx  Ticker.tsx
frontend/src/lib/: constants.ts  contract.ts
frontend/src/types/: index.ts
src/: App.tsx  lib.rs  main.tsx  test.rs
src/components/: ConfirmModal.tsx  Navbar.tsx  RightPanel.tsx  SavingsForm.tsx  SendForm.tsx  ToastList.tsx  VerifyForm.tsx
src/context/: ToastContext.tsx
src/hooks/: useNetworkStats.ts  useSessionStats.ts  useTxHistory.ts
